muziki/src/Layout.css
/* Layout.css */

body {
  background-color: black;
    margin: 0;
    font-family: Arial, sans-serif;
  }
  
  .layout {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
  }
  
  header {
    background-color: #d3d3d3;
    color: rgb(255, 255, 255);
    padding: 0rem;
    align-items: left;
  }
  
  header nav {
    display: flex;
    justify-content: flex-start;
  }
  
  nav ul {
    list-style: none;
    display: flex;
    gap: 1rem;
    margin: 0;
    padding: 0;
  }
  
  nav ul li {
    display: inline;
    align-items: left;
  }
  
  nav ul li a {
    color: rgb(2, 2, 2);
    padding: 1.5rem;
    text-decoration: none;
    font-weight: bold;
    border-radius: 4px;
    transition: background-color 0.3s ease;
    width: 90px;
    align-items: left;
  }
  
  nav ul li a:hover {
    background-color: #575757;
    color: white;
  }
  

  
  footer {
    background-color: #333;
    color: white;
    text-align: center;
    padding: 1rem;
    position: relative;
    bottom: 0;
    width: 100%;
  }
  

